src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>ActualNumberOfActiveMembers__c</fullName>
        <label>Actual Number Of Active Members</label>
        <summaryFilterItems>
            <field>AccountSponsor__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>AccountSponsor__c.Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ActualNumberOfMembers__c</fullName>
        <label>Actual Number of Members</label>
        <summaryForeignKey>AccountSponsor__c.Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AffidavitPOP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affidavit/POP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnalyticsStatus__c</fullName>
        <label>Analytics Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aborted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ended</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssetType__c</fullName>
        <label>Asset Type</label>
        <picklist>
            <picklistValues>
                <fullName>All</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Player</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wallboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WiFi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AssetsReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assets Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annually</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BroadsignCampaignId__c</fullName>
        <label>Broadsign Campaign ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BroadsignCriteriaResourceId__c</fullName>
        <label>Broadsign Criteria Resource ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BroadsignCriteria__c</fullName>
        <label>Broadsign Criteria Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Therapeutic Category</label>
        <picklist>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Atrial Fibrillation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Cholesterol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Heart Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Hypertension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology - Platelet Inhibitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology - Acne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dermatology - Psoriasis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Basal Insulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - GLP-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Glucose Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Hypothyroidism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Inhaled Insulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Injection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes - Rapid Acting Insulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology - Digestion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gastroenterology - GERD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClickTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Click Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sponsorship Account which the Campaign is associated with.</description>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Filed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Frequency (Hourly)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Go_Live_Rule__c</fullName>
        <label>Go-Live Rule</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Impression_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Impression Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inclusion_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Inclusion Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>JSON_Name__c</fullName>
        <label>JSON Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Length in seconds of the advertisement.</description>
        <inlineHelpText>Enter length in seconds</inlineHelpText>
        <label>Spot Length (in seconds)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Literature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Literature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIA_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>MIA Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MdmSponsorName__c</fullName>
        <label>MDM Sponsor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MemberDelta__c</fullName>
        <formula>TargetNumberOfMembers__c - ActualNumberOfActiveMembers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Delta</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDeployments__c</fullName>
        <label># of Deployments</label>
        <summaryForeignKey>Deployment__c.Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <formula>Opportunity__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpportunityOwner__c</fullName>
        <formula>Opportunity__r.Owner.FirstName + &quot; &quot; + Opportunity__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The sponsorship sales opportunity which the given campaign originated from.</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.RecordType.Name</field>
                <operation>equals</operation>
                <value>Sponsorship</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentSponsor__c</fullName>
        <label>Parent Sponsor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_List_Details__c</fullName>
        <label>Pharma List Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramImplementationNotes__c</fullName>
        <label>Program Implementation Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ROFR_Date__c</fullName>
        <label>ROFR Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ResearchRoi__c</fullName>
        <label>Research/ROI</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SentToAccountsReceivable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to Accounts Receivable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SpendNotes__c</fullName>
        <label>Spend Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SponsorshipAnalyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsorship Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Month__c</fullName>
        <formula>CASE(MONTH(StartDate),
1, &quot;01 - January&quot;,
2, &quot;02 - February&quot;,
3, &quot;03 - March&quot;,
4, &quot;04 - April&quot;,
5, &quot;05 - May&quot;,
6, &quot;06 - June&quot;,
7, &quot;07 - July&quot;,
8, &quot;08 - August&quot;,
9, &quot;09 - September&quot;,
10, &quot;10 - October&quot;,
11, &quot;11 - November&quot;,
12, &quot;12 - December&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Year__c</fullName>
        <formula>YEAR(StartDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetNumberOfMembers__c</fullName>
        <label>Target Number of Members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetNumberOfTablets__c</fullName>
        <label>Target Number of Tablets</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TargetNumberOfUnits__c</fullName>
        <label>Target Number of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAdTime__c</fullName>
        <formula>(Length__c  *  Frequency__c)/60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Ad Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalSpend__c</fullName>
        <label>Total Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>skyenterprise__Phone__c</fullName>
        <description>A phone number associated with this Campaign.  Typically the number that a prospective customer will call when responding to marketing efforts based on the Campaign.</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>BroadsignCriteriaResourceId__c</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>all</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>all</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>